# ModernCppStarter

./: .gitignore  CMakeLists.txt
all/: CMakeLists.txt
src/cmds/greeter/: main.cpp
src/include/greeter/: greeter.h
src/libs/greeter/: greeter.cpp
src/test/: greeter.cpp
standalone/: CMakeLists.txt
targets/all/: CMakeLists.txt
targets/cmds/greeter/: CMakeLists.txt
targets/doc/: CMakeLists.txt
targets/docs/greeter/: CMakeLists.txt
targets/lib/: CMakeLists.txt
targets/libs/greeter/: CMakeLists.txt
targets/test/: CMakeLists.txt
targets/tests/greeter/: CMakeLists.txt
test/: CMakeLists.txt
